--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header class="header">
       <a href="#" class="logo"><span>Suyash</span>Verma</a>
       <nav class="navbar">
-        <a href="#" class="">Portfolio</a>
-        <a href="#" class="">services</a>
+        <a href="#" class="">Services</a>
         <a href="#" class="">Experiences</a>
         <a href="#" class="">Projects</a>
         <a href="#" class="">Education</a>
@@ -45,8 +44,10 @@
           </div>
         </div>
       </section>
-      <!-- <section class="about">
-        <h2 class="heading">About<span>Me</span></h2>
+      <section class="about" style="width: 100%">
+        <!-- <div>
+          <h2 class="heading">About<span>Me</span></h2>
+        </div> -->
 
         <div class="about-img">
           <img src="/IMG_20231119_110150_093.jpg" />
@@ -60,11 +61,55 @@
           </p>
           <a href="#" class="btn-2">Experiences</a>
         </div>
-      </section> -->
+      </section>
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
+    <section class="contact-form">
+      <h2 class="contact-me">Contact<span>Me</span></h2>
+      <form  action="#">
+      <div class="input-box">
+        <input type="text" placeholder="full Name">
+        <input type="email" placeholder="E-mail">
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="phone number">
+          <input type="text" placeholder="subject">
+          </div>
+          <textarea name="" id="" cols="" rows="10"
+          placeholder="Your Message"></textarea>
+          <input type="submit" value="Send Message" class="btn-1">
+     </form>
+      </div>
+
+    </section>
+    <footer class="footer">
+      <div class="social">
+        <a href="#"><box-icon type='logo' name='facebook-circle'></box-icon></a>
+        <a href="#"><box-icon type='logo' name='linkedin-square'></box-icon></a>
+        <a href="#"><box-icon type='logo' name='instagram'></box-icon></a>
+        
+      </div>
+      <ul class="list">
+        <li>
+          <a href="#">FAQ</a>
+        </li> 
+        <li>
+          <a href="#">Services</a>
+        </li>  
+        <li>
+          <a href="#">About Me</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>  
+        <li>
+          <a href="#">Privacy Policy</a>
+        </li>     
+      </ul>
+      <p class="copyright">&copy 2024 Suyash Verma  | All Right Reserved</p>
+    </footer>
   </body>
 </html>
